--- a/set.ini
+++ b/set.ini
@@ -7,3 +7,6 @@ CheckOnlyShowResponseTitle=1
 CheckInCurrentFolder=1
 EditSleep=10
 EditProxy=127.0.0.1:10802
+CheckWinHttp=1
+[Dic]
+Checked=demo.txt|
